Add SortByDeadline tests
Updated the tests pertaining to said class.